--- a/trunk/MyNightOut/src/mynightout/ui/UserMainForm.form
+++ b/trunk/MyNightOut/src/mynightout/ui/UserMainForm.form
@@ -48,6 +48,7 @@
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="confirmReservationButton" min="-2" pref="159" max="-2" attributes="0"/>
+                                      <Component id="SelectTableButton" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -62,7 +63,7 @@
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
