ιστορικό κρατήσεων καταστήματος, issue 12: Done

--- a/MyNightOut/src/mynightout/ui/NightclubMainForm.form
+++ b/MyNightOut/src/mynightout/ui/NightclubMainForm.form
@@ -26,7 +26,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
@@ -34,8 +34,9 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="clubNameLabel" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                          <Component id="showReservationHistoryButton" alignment="0" max="32767" attributes="0"/>
                           <Component id="checkFullnessButton" max="32767" attributes="0"/>
                           <Component id="setDaysClosedButton" alignment="1" max="32767" attributes="0"/>
                           <Component id="showSuppliersButton" alignment="1" max="32767" attributes="0"/>
@@ -44,16 +45,16 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="setClosedDatesButton" alignment="0" max="32767" attributes="0"/>
+                          <Component id="displayCellarButton" max="32767" attributes="0"/>
                           <Component id="showCellarForm" alignment="0" max="32767" attributes="0"/>
+                          <Component id="changeNightClubTableProfileButton" alignment="0" pref="181" max="32767" attributes="0"/>
+                          <Component id="setClosedDatesButton" alignment="0" max="32767" attributes="0"/>
+                          <Component id="logoutButton" max="32767" attributes="0"/>
                           <Component id="editSuppliersButton" alignment="0" max="32767" attributes="0"/>
-                          <Component id="displayCellarButton" alignment="0" max="32767" attributes="0"/>
-                          <Component id="changeNightClubTableProfileButton" alignment="0" max="32767" attributes="0"/>
-                          <Component id="logoutButton" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace min="0" pref="24" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="40" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -85,14 +86,17 @@
                   <Component id="deleteButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="displayCellarButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="editSuppliersButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="showReservationHistoryButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="editSuppliersButton" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="logoutButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="exitButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="logoutButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="73" max="32767" attributes="0"/>
+              <EmptySpace pref="71" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -206,6 +210,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="logoutButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="showReservationHistoryButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="&#x399;&#x3c3;&#x3c4;&#x3bf;&#x3c1;&#x3b9;&#x3ba;&#x3cc; &#x3ba;&#x3c1;&#x3b1;&#x3c4;&#x3ae;&#x3c3;&#x3b5;&#x3c9;&#x3bd;"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="showReservationHistoryButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="editSuppliersButton">
